--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 
 <ul *ngFor="let user of users">
   <li>ID is {{user.id}} and username is {{user.userName}}</li>
-</ul>
+</ul> -->
+
+<router-outlet></router-outlet>
